--- a/blocks/cover/__content/cover__content.css
+++ b/blocks/cover/__content/cover__content.css
@@ -1,8 +1,6 @@
 .cover__content {
-  position: absolute;
-  margin: 0 auto;
-  right: 50%;
-  top: 50%;
-  transform: translate(50%, -50%);
+  z-index: 1;
+  position: relative;
   pointer-events: none;
+  max-width: 560px;
 }
