--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,7 +1,59 @@
 .cover__link {
-  transition: opacity .8s;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 740px;
+  background-image:
+    url(../../../images/cover-trains.jpg);
+  background-position: center;
+  background-size: cover;
+  text-decoration: none;
 }
 
-.cover__link:hover {
+@media screen and (max-width: 1279px) {
+  .cover__link {
+    min-height: 640px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .cover__link {
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cover__link {
+    min-height: 380px;
+  }
+}
+
+@media screen and (max-width: 525px) {
+  .cover__link {
+    min-height: 280px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .cover__link {
+    min-height: 200px;
+  }
+}
+
+.cover__link::before {
+  z-index: 0;
+  position: absolute;
+  content: '';
+  background-color: #2A2C2F;
   opacity: 0.3;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: opacity .6s;
+}
+
+.cover__link:hover::before {
+  opacity: 0.8;
 }
