--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,4 +1,5 @@
 .cover__subtitle {
+  color: #fff;
   text-align: center;
   max-width: 360px;
   margin: 32px auto 0 auto;
@@ -10,5 +11,7 @@
   .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
+    max-width: 288px;
+    margin-top: 16px;
   }
 }
