--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,4 +1,5 @@
 .cover__title {
+  color: #fff;
   margin: 0 auto;
   text-align: center;
   font-weight: 900;
@@ -6,7 +7,7 @@
   line-height: 76px;
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 525px) {
   .cover__title {
     font-size: 52px;
     line-height: 55px;
@@ -17,5 +18,6 @@
   .cover__title {
     font-size: 32px;
     line-height: 35px;
+    max-width: 288px;
   }
 }
