--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -7,13 +7,17 @@
 
 @media screen and (max-width: 800px) {
   .footer {
-    padding: 88px 24px 24px 24px;
+    padding-top: 88px;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 720px) {
   .footer {
-    padding: 64px 16px 16px 24px;
+    padding-top: 64px;
+    padding-left: 16px;
+    padding-right: 16px;
     flex-direction: column;
     gap: 48px;
   }
