--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,12 +7,14 @@
 
 @media screen and (max-width: 1024px) {
   .header {
-    padding: 28px 24px 48px 24px;
+    padding-bottom: 48px;
   }
 }
 
 @media screen and (max-width: 450px) {
   .header {
-    padding: 16px 16px 48px 16px;
+    padding-top: 16px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 }
