--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -9,12 +9,12 @@
 
 @media screen and (max-width: 768px) {
   .intro__list {
-    margin: 33px 0 88px 0;
+    margin-bottom: 88px;
   }
 }
 
 @media screen and (max-width: 400px) {
   .intro__list {
-    margin: 34px 0 64px 0;
+    margin-bottom: 64px;
   }
 }
