--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -9,7 +9,7 @@
 
 @media screen and (max-width: 1024px) {
   .lead__subtitle {
-    margin: 32px auto 56px auto;
+    margin-bottom: 56px;
   }
 }
 
@@ -17,7 +17,6 @@
 @media screen and (max-width: 680px) {
   .lead__subtitle {
     max-width: 361px;
-    padding: 0 16px 0 16px;
     font-size: 22px;
     line-height: 30px;
   }
@@ -26,7 +25,8 @@
 @media screen and (max-width: 400px) {
   .lead__subtitle {
     max-width: 288px;
-    margin: 16px auto 40px auto;
+    margin-top: 16px;
+    margin-bottom: 40px;
     font-size: 16px;
     line-height: 20px;
   }
