--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,5 +4,9 @@
   background: #2A2C2F;
   color: #FFFFFF;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; 
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  min-width: 320px;
 }
