--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -11,6 +11,13 @@
   }
 }
 
+@media screen and (max-width: 1023px) {
+  .header {
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
+
 @media screen and (max-width: 450px) {
   .header {
     padding-top: 16px;
