--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,11 +1,12 @@
 .lead {
   max-width: 984px;
-  padding: 0 48px 0 48px;
+  padding: 0 48px;
 }
 
 @media screen and (max-width: 1024px) {
   .lead {
     max-width: 928px;
-    padding: 0;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
