--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,6 +1,6 @@
 .photo-grid {
   max-width: 1184px;
-  padding: 0 48px 0 48px;
+  padding: 0 48px;
 }
 
 @media screen and (max-width: 1100px) {
@@ -12,12 +12,14 @@
 @media screen and (max-width: 900px) {
   .photo-grid {
     max-width: 852px;
-    padding: 0 24px 0 24px;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
 
 @media screen and (max-width: 400px) {
   .photo-grid {
-    padding: 0 16px 0 16px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 }
