--- a/blocks/places/__block/places__block.css
+++ b/blocks/places/__block/places__block.css
@@ -9,14 +9,14 @@
 
 @media screen and (max-width: 1024px) {
   .places__block {
-    gap: 48px 32px;
+    column-gap: 32px;
     grid-template-columns: minmax(380px, 440px) minmax(300px, 1fr);
   }
 }
 
 @media screen and (max-width: 900px) {
   .places__block {
-    gap: 48px 28px;
+    column-gap: 28px;
     grid-template-columns: minmax(300px, 340px) minmax(300px, 1fr);
   }
 }
@@ -31,6 +31,7 @@
       "image"
       "text";
     grid-template-columns: minmax(288px, 460px);
-    gap: 32px;
+    column-gap: 32px;
+    row-gap: 32px;
   }
 }
